# fuckupRSS

./: .editorconfig  .gitignore  .mcp.json  .prettierignore  .prettierrc  .semgrepignore  AGENTS.md  ANALYSIS_REPORT.md  CLAUDE.md  FEEDS.md  FNORD_STATS_HISTORY.md  FNORD_STATS_SCHEMA.md  FNORD_STATS_SEMANTICS.md  FNORD_STATS_UX.md  KEYWORD_EVALUATION_REPORT.md  MIGRATION_NOTES.md  README.md  THIRD-PARTY-LICENSES.md  TODO.md  eslint.config.js  fuckupRSS-Anforderungen.md  index.html  package-lock.json  package.json  playwright-cli.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json  tech-debt-analysis.md  tech-debt-rust.md  tech-debt-tests.md  tech-debt-typescript.md  tech-debt-unused-code.md
.gitea/workflows/: ci.yaml  release.yaml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit  pre-push
docs/: AI_PROCESSING_PIPELINE.md  ANFORDERUNGEN.md  DATABASE_SCHEMA.md  DB_INFRASTRUCTURE_DEBT.md  FEEDS.md  GRAPH_REQUIREMENTS.md  KEYWORDS_SCHEMA.md  PROCESSING_PIPELINE.md  README.md  TAURI_COMMANDS_REFERENCE.md  TECH_DEBT_REPORT.md  TESTING.md
docs/api/: TAURI_COMMANDS_REFERENCE.md
docs/architecture/: AI_PROCESSING_PIPELINE.md  DATABASE_SCHEMA.md  KEYWORD_IMPROVEMENT_STRATEGY.md
docs/archive/: STOPWORD_KEYWORD_REPORT.md  TODO_LEGACY_2026-01.md
docs/guides/: CI_CD_SETUP.md  HARDWARE_OPTIMIZATION.md  QUALITY_CHECKLIST.md  RELEASE_CHECKLIST.md  TESTING.md
docs/plans/: 2026-02-27-pipeline-optimization-design.md  2026-03-01-ollama-server-dropdown-design.md  2026-03-07-ollama-lan-proxy.md  OPENAI_INTEGRATION_PLAN.md  (+2 more)
e2e/: app.spec.ts  erisian-archives.spec.ts  fixtures.ts
scripts/: benchmark-pragma-settings.sh  build-macos.sh  clean_stopwords.sh  cleanup-db-infrastructure.sh  ollama-proxy.py
src/: App.svelte  app.css  main.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: .gitkeep  default_stopwords.json
src-tauri/icons/: icon.icns
src-tauri/resources/stopwords/: de.txt  en.txt  news.txt  technical.txt
src-tauri/src/: embedding_worker.rs  embeddings.rs  error.rs  lib.rs  logging.rs  main.rs  proxy.rs  theme_clustering.rs
src-tauri/src/ai_provider/: claude_cli_provider.rs  gemini_cli_provider.rs  mod.rs  ollama_provider.rs  openai_embedding_provider.rs  openai_provider.rs
src-tauri/src/categories/: mod.rs  tests.rs
src-tauri/src/commands/: article_analysis.rs  batch_integration_tests.rs  briefings.rs  categories.rs  embedding.rs  entities.rs  fnords.rs  immanentize.rs  keyword_type_detection.rs  law_of_fives.rs  maintenance.rs  mindfuck.rs  mod.rs  ollama.rs  opml.rs  pentacles.rs  profiles.rs  proxy.rs  recommendations.rs  retrieval.rs  settings.rs  stopwords.rs  story_clusters.rs  sync.rs  tags.rs  tests.rs  theme_report.rs
src-tauri/src/commands/ai/: article_processor.rs  batch_processor.rs  data_persistence.rs  helpers.rs  mod.rs  model_management.rs  prompts.rs  similarity.rs  types.rs
src-tauri/src/commands/ollama/: article_processor.rs  batch_processor.rs  data_persistence.rs  helpers.rs  mod.rs  model_management.rs  prompts.rs  similarity.rs  types.rs
src-tauri/src/db/: mod.rs  schema.rs  tests.rs  transaction.rs
src-tauri/src/keywords/: advanced.rs  clustering.rs  config.rs  db_evaluation_test.rs  evaluation_test.rs  mod.rs  rake.rs  stopwords_de.txt  stopwords_en.txt  tests.rs  types.rs
src-tauri/src/ollama/: mod.rs  tests.rs
src-tauri/src/retrieval/: headless.rs  mod.rs  tests.rs
src-tauri/src/similarity/: embedding.rs  hybrid.rs  mod.rs  string.rs  tests.rs
src-tauri/src/sync/: mod.rs  tests.rs
src-tauri/src/text_analysis/: bias.rs  category_matcher.rs  keyword_seeds.rs  mod.rs  stopwords.rs  tfidf.rs
src-tauri/tests/: openai_integration_test.rs  openai_pipeline_test.rs
(+138 files in other folders)
