[package]
name = "fuckuprss"
version = "0.1.0"
description = "First Universal Cybernetic-Kinetic RSS Processor"
authors = ["fuckupRSS"]
edition = "2021"

[lib]
name = "fuckuprss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "5"
feed-rs = "2"
reqwest_new = { package = "reqwest", version = "0.12", features = ["rustls-tls", "json", "gzip", "brotli", "deflate"], default-features = false }
readability = "0.3"
url = "2"
bytes = "1"
sha2 = "0.10"
keyword_extraction = { version = "1.5", features = ["rake", "tf_idf", "text_rank"] }
yake-rust = "1.0"
whatlang = "0.16"
once_cell = "1.19"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
