[package]
name = "fuckuprss"
version = "0.1.0"
description = "First Universal Cybernetic-Kinetic RSS Processor"
authors = ["fuckupRSS"]
license = "MIT"
edition = "2021"

[lib]
name = "fuckuprss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "process", "macros"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime", "_fetcher-rusttls-tokio"], default-features = false }
thiserror = "2"
dirs = "5"
feed-rs = "2"
reqwest_new = { package = "reqwest", version = "0.12", features = ["rustls-tls", "json", "gzip", "brotli", "deflate"], default-features = false }
readability = "0.3"
url = "2"
bytes = "1"
sha2 = "0.10"
keyword_extraction = { version = "1.5", features = ["rake", "tf_idf", "text_rank"] }
yake-rust = "1.0"
whatlang = "0.16"
regex = "1"
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
opml = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
unicode-segmentation = "1.11"
rust-stemmers = "1.2.0"
uuid = { version = "1", features = ["v4"] }
strsim = "0.11"
async-trait = "0.1"
ammonia = "4"
tempfile = "3"

[features]
default = []
clustering = []

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
